--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -1,16 +1,38 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent" >
+	android:layout_height="match_parent"
+	android:background="#485F8C" >
 
 	<Button
 		android:id="@+id/loginButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_gravity="center_horizontal"
-		android:layout_marginTop="100dp"
-		android:text="Log In"
+		android:layout_alignParentBottom="true"
+		android:layout_centerHorizontal="true"
+		android:layout_marginBottom="40dp"
+		android:padding="15dp"
+		android:text="@string/login"
 		android:textColor="#fff"
 		android:textStyle="bold" />
 
-</LinearLayout>
+	<ImageView
+		android:id="@+id/logo"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_centerInParent="true"
+		android:contentDescription="@null"
+		android:src="@drawable/ic_launcher" />
+
+	<TextView
+		android:id="@+id/textView1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_below="@+id/logo"
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="32dp"
+		android:text="TextView"
+		android:textColor="#fff"
+		android:textStyle="bold" />
+
+</RelativeLayout>
