--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -31,7 +31,7 @@
 		android:layout_below="@+id/logo"
 		android:layout_centerHorizontal="true"
 		android:layout_marginTop="32dp"
-		android:text="TextView"
+		android:text="Blabla"
 		android:textColor="#fff"
 		android:textStyle="bold" />
 
