--- a/Mpp_Project/res/layout/fragment_section_home.xml
+++ b/Mpp_Project/res/layout/fragment_section_home.xml
@@ -18,20 +18,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
 
-        
 
-    </LinearLayout>
+    
+<ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/cardList">
+    
+</ListView>
 
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Home"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
 
 </FrameLayout>
