--- a/Mpp_Project/res/layout/fragment_section_home.xml
+++ b/Mpp_Project/res/layout/fragment_section_home.xml
@@ -20,13 +20,12 @@
 
 
 
-    
-<ListView
+<it.gmariotti.cardslib.library.view.CardListView 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/cardList">
-    
-</ListView>
+</it.gmariotti.cardslib.library.view.CardListView>    
 
+    
 
 </FrameLayout>
