--- a/Mpp_Project/res/layout/fragment_expenses.xml
+++ b/Mpp_Project/res/layout/fragment_expenses.xml
@@ -43,7 +43,7 @@
         android:text="Button" />
 
     <ListView
-        android:id="@+id/listView1"
+        android:id="@android:id/list"
         android:layout_width="wrap_content"
         android:layout_height="350dp"
         android:layout_alignParentBottom="true"
@@ -56,7 +56,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/okButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="14dp"
-        android:text="My Expensies" />
+        android:layout_marginTop="14dp" />
+
 
 </RelativeLayout>
