--- a/Mpp_Project/res/layout/layout_expensesitem.xml
+++ b/Mpp_Project/res/layout/layout_expensesitem.xml
@@ -1,25 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
     
-        <TextView
+    <TextView
         android:id="@+id/datetext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="date"
         android:layout_marginTop="14dp" />
 
     <TextView
         android:id="@+id/commenttext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="comment"
         android:layout_marginTop="14dp" />
 
     <TextView
         android:id="@+id/pricetext"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="price"
         android:layout_marginTop="14dp" />
 
 </LinearLayout>
