--- a/Mpp_Project/res/layout/layout_loanitem.xml
+++ b/Mpp_Project/res/layout/layout_loanitem.xml
@@ -2,23 +2,23 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:id="@+id/itemLayout"
             android:background="#ffffff"
             android:weightSum="1"
             >
 
         <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/picUser"
                 android:layout_weight="0.10"
                 android:background="#ff0500"
                 android:layout_margin="5dp"/>
 
         <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:id="@+id/arrow"
                 android:longClickable="false"
                 android:background="#2737ff"
