Update LoansFragment + Bugfix in Expenses and Operations modules

--- a/Mpp_Project/res/layout/fragment_section_home.xml
+++ b/Mpp_Project/res/layout/fragment_section_home.xml
@@ -23,7 +23,7 @@
 <it.gmariotti.cardslib.library.view.CardListView 
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/cardList">
+        android:id="@+id/cardListHome">
 </it.gmariotti.cardslib.library.view.CardListView>    
 
     
