--- a/Mpp_Project/res/layout/choose_flat_card_view.xml
+++ b/Mpp_Project/res/layout/choose_flat_card_view.xml
@@ -14,6 +14,27 @@
             android:id="@+id/list_cardId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card:card_layout_resourceID="@layout/choose_flat"
-            />
+            card:card_layout_resourceID="@layout/card_layout"
+            >
+    
+		    <LinearLayout
+		    android:id="@+id/choose_card_layout"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="vertical" >
+		    <ImageView
+		        android:id="@+id/choose_card_image"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1" />
+		    
+		    <TextView
+		        android:id="@+id/choose_card_text"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_weight="1"
+		        android:text="Test" />
+
+		</LinearLayout>
+	</it.gmariotti.cardslib.library.view.CardView>
 </RelativeLayout>
