--- a/Mpp_Project/res/layout/fragment_section_loans.xml
+++ b/Mpp_Project/res/layout/fragment_section_loans.xml
@@ -12,7 +12,7 @@
             xmlns:card="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/listId"
+            android:id="@+id/cardListLoans"
             card:list_card_layout_resourceID="@layout/layout_loan_card">
 
     </it.gmariotti.cardslib.library.view.CardListView>
