--- a/Mpp_Project/res/layout/choose_flat_card_view.xml
+++ b/Mpp_Project/res/layout/choose_flat_card_view.xml
@@ -26,14 +26,16 @@
 		        android:id="@+id/choose_card_image"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
-		        android:layout_weight="1" />
+		        android:layout_weight="1" 
+		        android:paddingBottom="10dp"/>
 		    
 		    <TextView
 		        android:id="@+id/choose_card_text"
 		        android:layout_width="match_parent"
 		        android:layout_height="wrap_content"
 		        android:layout_weight="1"
-		        android:text="Test" />
+		        android:textSize="20sp"
+		         />
 
 		</LinearLayout>
 	</it.gmariotti.cardslib.library.view.CardView>
