--- a/Mpp_Project/res/values/colors.xml
+++ b/Mpp_Project/res/values/colors.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	
-	<color name="blue">#e2e2ff</color>
+
+	<color name="blue">#78B2DA</color>
+
 </resources>
