--- a/Mpp_Project/res/drawable/button_round.xml
+++ b/Mpp_Project/res/drawable/button_round.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#66CCFF"/>
+    <solid android:color="#78B2DA"/>
     <stroke android:width="2sp" android:color="#CCFF" />
 </shape>
