--- a/Mpp_Project/res/layout/activity_new_flat.xml
+++ b/Mpp_Project/res/layout/activity_new_flat.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
-	<LinearLayout 
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal" >
-	    <Button
-	        android:id="@+id/button2"
-	        android:layout_weight="1"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Button" />
-	
-	    <Button
-	        android:id="@+id/button1"
-	        android:layout_weight="1"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Button" />
-    </LinearLayout>
-    
-	<it.gmariotti.cardslib.library.view.CardListView 
-	    xmlns:card="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/cardList"
-        card:list_card_layout_resourceID="@layout/choose_flat_card_view"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="10dp"
-        >
-	</it.gmariotti.cardslib.library.view.CardListView>    
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
+
+	<LinearLayout
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:orientation="horizontal" >
+
+		<Button
+			android:id="@+id/button2"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="Create a Flat" />
+
+		<Button
+			android:id="@+id/button1"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_weight="1"
+			android:text="Join a Flat" />
+	</LinearLayout>
+
+	<it.gmariotti.cardslib.library.view.CardListView
+		xmlns:card="http://schemas.android.com/apk/res-auto"
+		android:id="@+id/cardList"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
+		android:layout_marginTop="10dp"
+		card:list_card_layout_resourceID="@layout/choose_flat_card_view" >
+	</it.gmariotti.cardslib.library.view.CardListView>
 
 </LinearLayout>
