--- a/Mpp_Project/res/menu/main.xml
+++ b/Mpp_Project/res/menu/main.xml
@@ -2,4 +2,9 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context="dk.aau.mpp_project.MainActivity" >
 
+	<item
+		android:id="@+id/action_new_flat"
+		android:showAsAction="never"
+		android:title="Create or join a flat"/>
+
 </menu>
