--- a/Mpp_Project/res/layout/activity_new_flat.xml
+++ b/Mpp_Project/res/layout/activity_new_flat.xml
@@ -10,14 +10,14 @@
 		android:orientation="horizontal" >
 
 		<Button
-			android:id="@+id/button2"
+			android:id="@+id/newFlatButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
 			android:text="Create a Flat" />
 
 		<Button
-			android:id="@+id/button1"
+			android:id="@+id/joinFlatButton"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_weight="1"
