Update Fragment with events and improving Loans UI

--- a/Mpp_Project/res/layout/layout_loan_item.xml
+++ b/Mpp_Project/res/layout/layout_loan_item.xml
@@ -1,60 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/itemLayout"
-                android:background="#ffffff"
-                android:weightSum="1"
-        >
-
-    <ImageView
-            android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/loan_card_layout"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  android:id="@+id/loan_main_info"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal"
+                  android:layout_marginLeft="10dp"
+                  android:layout_marginRight="10dp">
+        <ImageView
+                android:id="@+id/picYou"
+                android:longClickable="false"
+                android:layout_marginRight="5dp"
+                android:layout_gravity="center_vertical"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_row="0"
+                android:layout_column="0"/>
+        <ImageView
+                android:id="@+id/picArrow"
+                android:longClickable="false"
+                android:layout_gravity="center_vertical"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_row="0"
+                android:layout_column="0"/>
+        <ImageView
             android:id="@+id/picUser"
-            android:layout_weight="0.10"
-            android:background="#ff0500"
-            android:layout_margin="5dp"/>
-
-    <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/arrow"
             android:longClickable="false"
-            android:background="#2737ff"
-            android:layout_alignTop="@+id/picUser"
-            android:layout_toRightOf="@+id/picUser"
-            android:layout_marginRight="15dp"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/infoItem"
-            android:layout_gravity="center"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/arrow"/>
-
-    <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/amountItem"
+            android:layout_marginRight="10dp"
             android:layout_gravity="center_vertical"
-            android:textColor="#979593"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/isPaid"/>
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_marginLeft="5dp"/>
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/amountItem"
+                android:layout_gravity="center_vertical"
+                android:textColor="#979593"
+                android:layout_centerVertical="true"
+                android:layout_toLeftOf="@+id/isPaid"
+                android:text="10.00 €"
+                android:layout_row="0"
+                android:layout_column="3"/>
 
-    <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Paid"
-            android:id="@+id/isPaid"
-            android:layout_weight="0.10"
-            android:layout_gravity="center_vertical"
-            android:textSize="10dp"
-            android:layout_marginRight="23dp"
-            android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"/>
-</RelativeLayout>
+        <CheckBox
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Paid"
+                android:id="@+id/isPaid"
+                android:layout_gravity="center_vertical"
+                android:textSize="10dp"
+                android:layout_centerVertical="true"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true"
+                android:layout_row="0"
+                android:layout_column="4"/>
+
+        </LinearLayout>
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                      android:id="@+id/loan_comments"
+                      android:layout_width="match_parent"
+                      android:layout_height="match_parent"
+                      android:orientation="horizontal"
+                      android:layout_marginLeft="10dp">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/infoItem"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_toRightOf="@+id/picUser"
+                    android:text="Some information"
+                    android:layout_marginRight="10dp"/>
+            </LinearLayout>
+</LinearLayout>
