--- a/Mpp_Project/res/layout/layout_loan_card.xml
+++ b/Mpp_Project/res/layout/layout_loan_card.xml
@@ -10,10 +10,11 @@
 
     <it.gmariotti.cardslib.library.view.CardView
             xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:card="http://schemas.android.com/apk/res-auto"
             android:id="@+id/list_cardId"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            card:card_layout_resourceID="@layout/layout_loan_item"
-            />
+
+           >
+
+    </it.gmariotti.cardslib.library.view.CardView>
 </RelativeLayout>
