--- a/Mpp_Project/res/layout/fragment_section_settings.xml
+++ b/Mpp_Project/res/layout/fragment_section_settings.xml
@@ -1,45 +1,80 @@
-<!--
-  Copyright 2012 The Android Open Source Project
-  
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-      http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical" >
 
-    <LinearLayout android:orientation="vertical"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center">
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="3dp"
+		android:layout_marginLeft="20dp"
+		android:layout_marginTop="10dp"
+		android:text="@string/flat_settings"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:textColor="#5e5e5e"
+		android:textStyle="bold" />
 
-        
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
+		android:background="#5e5e5e" />
 
-    </LinearLayout>
+	<TextView
+		android:id="@+id/textViewChangeDetails"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="5dp"
+		android:background="@drawable/selector_background_item_settings"
+		android:clickable="true"
+		android:paddingBottom="10dp"
+		android:paddingLeft="30dp"
+		android:paddingTop="10dp"
+		android:text="@string/change_details"
+		android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <Button
-            android:id="@+id/logoutButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="100dp"
-            android:text="Log Out"
-            android:textColor="#fff"
-            android:textStyle="bold" />
+	<TextView
+		android:id="@+id/textViewLeaveFlat"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:background="@drawable/selector_background_item_settings"
+		android:clickable="true"
+		android:paddingBottom="10dp"
+		android:paddingLeft="30dp"
+		android:paddingTop="10dp"
+		android:text="@string/leave_flat"
+		android:textAppearance="?android:attr/textAppearanceMedium" />
 
-        <Button
-        	android:id="@+id/buttonCreateFlat"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="Flat" />
+	<TextView
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginBottom="3dp"
+		android:layout_marginLeft="20dp"
+		android:layout_marginTop="10dp"
+		android:text="@string/user_settings"
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:textColor="#5e5e5e"
+		android:textStyle="bold" />
 
-</FrameLayout>
+	<View
+		android:layout_width="match_parent"
+		android:layout_height="1dp"
+		android:layout_marginLeft="10dp"
+		android:layout_marginRight="10dp"
+		android:background="#5e5e5e" />
+
+	<TextView
+		android:id="@+id/textViewLogout"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="5dp"
+		android:background="@drawable/selector_background_item_settings"
+		android:clickable="true"
+		android:paddingBottom="10dp"
+		android:paddingLeft="30dp"
+		android:paddingTop="10dp"
+		android:text="@string/logout"
+		android:textAppearance="?android:attr/textAppearanceMedium" />
+
+</LinearLayout>
