--- a/Mpp_Project/res/layout/fragment_section_loans.xml
+++ b/Mpp_Project/res/layout/fragment_section_loans.xml
@@ -8,6 +8,12 @@
         android:background="#f0f0f0"
         android:id="@+id/mainLayout">
 
+    <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Refresh"
+            android:id="@+id/refreshButton"/>
+
     <it.gmariotti.cardslib.library.view.CardListView
             xmlns:card="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
