--- a/Mpp_Project/res/layout/fragment_section_home.xml
+++ b/Mpp_Project/res/layout/fragment_section_home.xml
@@ -22,10 +22,9 @@
 
 <it.gmariotti.cardslib.library.view.CardListView 
         android:layout_width="match_parent"
+        xmlns:card="http://schemas.android.com/apk/res-auto"
         android:layout_height="match_parent"
-        android:id="@+id/cardListHome">
+        android:id="@+id/cardListHome"
+        card:list_card_layout_resourceID="@layout/list_card_thumbnail_layout">
 </it.gmariotti.cardslib.library.view.CardListView>    
-
-    
-
 </FrameLayout>
