--- a/Mpp_Project/res/layout/fragment_expenses.xml
+++ b/Mpp_Project/res/layout/fragment_expenses.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_alignParentLeft="true"
-        android:layout_alignTop="@+id/textView1" >
+        android:layout_alignTop="@+id/photo_label" >
 
         <EditText
             android:id="@+id/commentText"
@@ -22,7 +22,7 @@
         </EditText>
 
         <EditText
-            android:id="@+id/editText1"
+            android:id="@+id/new_flat_name"
             android:layout_width="50dp"
             android:layout_height="match_parent"
             android:hint="$" />
@@ -48,7 +48,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/photo_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
