--- a/Mpp_Project/res/layout/activity_new_flat.xml
+++ b/Mpp_Project/res/layout/activity_new_flat.xml
@@ -24,15 +24,13 @@
 			android:text="Join a Flat" />
 	</LinearLayout>
 
-	<it.gmariotti.cardslib.library.view.CardListView
-		xmlns:card="http://schemas.android.com/apk/res-auto"
-		android:id="@+id/cardList"
+	<ListView
+		android:id="@+id/list"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:layout_marginLeft="10dp"
 		android:layout_marginRight="10dp"
-		android:layout_marginTop="10dp"
-		card:list_card_layout_resourceID="@layout/choose_flat_card_view" >
-	</it.gmariotti.cardslib.library.view.CardListView>
+		android:layout_marginTop="10dp" >
+	</ListView>
 
 </LinearLayout>
