--- a/Mpp_Project/res/layout/activity_add_new_flat.xml
+++ b/Mpp_Project/res/layout/activity_add_new_flat.xml
@@ -1,93 +1,97 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scrollView1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:dividerPadding="10dp"
-    android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".AddNewFlatActivity" >
-
-    <EditText
-        android:id="@+id/new_flat_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Flat name" >
-
-        <requestFocus />
-    </EditText>
-
-    <EditText
-        android:id="@+id/new_flat_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/new_flat_password_repeat"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Repeat password"
-        android:inputType="textPassword" />
-
-    <EditText
-        android:id="@+id/new_flat_address"
-        android:layout_width="match_parent"
-        android:layout_height="71dp"
-        android:ems="10"
-        android:hint="Address"
-        android:inputType="textPostalAddress" />
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingBottom="5dp"
-        android:paddingTop="10dp"
-        android:text="Photo"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+    android:layout_height="wrap_content" >
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:showDividers="middle"
-        android:weightSum="3" >
+        android:layout_height="match_parent"
+        android:dividerPadding="10dp"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin" >
 
-        <ImageButton
-            android:id="@+id/add_pic_gallery"
+        <EditText
+            android:id="@+id/new_flat_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Flat name" >
+
+            <requestFocus />
+        </EditText>
+
+        <EditText
+            android:id="@+id/new_flat_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/new_flat_password_repeat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Repeat password"
+            android:inputType="textPassword" />
+
+        <EditText
+            android:id="@+id/new_flat_address"
+            android:layout_width="match_parent"
+            android:layout_height="71dp"
+            android:ems="10"
+            android:hint="Address"
+            android:inputType="textPostalAddress" />
+
+        <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blue"
-            android:padding="10dp"
-            android:src="@drawable/ic_action_gallery" />
+            android:paddingBottom="5dp"
+            android:paddingTop="10dp"
+            android:text="Photo"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
-
-        <ImageButton
-            android:id="@+id/add_pic_camera"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blue"
-            android:padding="10dp"
-            android:src="@drawable/ic_action_camera" />
+            android:showDividers="middle"
+            android:weightSum="3" >
+
+            <ImageButton
+                android:id="@+id/add_pic_gallery"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/blue"
+                android:padding="10dp"
+                android:src="@drawable/ic_action_gallery" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:id="@+id/add_pic_camera"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="@color/blue"
+                android:padding="10dp"
+                android:src="@drawable/ic_action_camera" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/new_flat_image"
+            android:layout_width="287dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.82"
+            android:src="@drawable/flat1small" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/new_flat_image"
-        android:layout_width="287dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.82"
-        android:src="@drawable/flat1small" />
-
-</LinearLayout>
+</ScrollView>
