--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -2,37 +2,29 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:background="@color/blue" >
+	android:background="#3b5998" >
 
 	<Button
 		android:id="@+id/loginButton"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_alignParentBottom="true"
-		android:layout_centerHorizontal="true"
-		android:layout_marginBottom="40dp"
-		android:padding="15dp"
+        android:padding="15dp"
 		android:text="@string/login"
 		android:textColor="#fff"
-		android:textStyle="bold" />
+		android:textStyle="bold"
+        android:layout_marginBottom="69dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"/>
 
 	<ImageView
 		android:id="@+id/logo"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerInParent="true"
-		android:contentDescription="@null"
-		android:src="@drawable/ic_launcher" />
-
-	<TextView
-		android:id="@+id/photo_label"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/logo"
-		android:layout_centerHorizontal="true"
-		android:layout_marginTop="32dp"
-		android:text="Blabla"
-		android:textColor="#fff"
-		android:textStyle="bold" />
+        android:contentDescription="@null"
+		android:src="@drawable/av4"
+        android:layout_above="@+id/loginButton"
+        android:layout_alignLeft="@+id/loginButton"
+        android:layout_alignStart="@+id/loginButton"
+        android:layout_marginBottom="92dp"/>
 
 </RelativeLayout>
