--- a/Mpp_Project/res/layout/spinner_rows.xml
+++ b/Mpp_Project/res/layout/spinner_rows.xml
@@ -22,7 +22,7 @@
         android:textColor="@drawable/red"
         android:textStyle="bold" />
 
-     <TextView
+     <CheckedTextView
          android:layout_toRightOf="@+id/image"
          android:padding="2dip"
          android:textColor="@drawable/darkgrey"
@@ -30,5 +30,9 @@
          android:id="@+id/sub"
          android:layout_below="@+id/spinnerUser"
          android:layout_width="wrap_content"
+         
+         android:checkMark="?android:attr/listChoiceIndicatorMultiple"
+        
          android:layout_height="wrap_content"/>
+
 </RelativeLayout>
