--- a/Mpp_Project/res/layout/fragment_section_settings.xml
+++ b/Mpp_Project/res/layout/fragment_section_settings.xml
@@ -77,4 +77,14 @@
 		android:text="@string/logout"
 		android:textAppearance="?android:attr/textAppearanceMedium" />
 
+	<TextView
+		android:id="@+id/flatId"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="5dp"
+		android:paddingBottom="10dp"
+		android:paddingLeft="30dp"
+		android:paddingTop="10dp"
+		android:textAppearance="?android:attr/textAppearanceMedium" />
+
 </LinearLayout>
