--- a/Mpp_Project/res/layout/layout_item_news.xml
+++ b/Mpp_Project/res/layout/layout_item_news.xml
@@ -21,10 +21,12 @@
 		android:id="@+id/comment"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerVertical="true"
-		android:layout_toRightOf="@+id/photo"
 		android:text=""
-		android:textAppearance="?android:attr/textAppearanceMedium" />
+		android:textAppearance="?android:attr/textAppearanceMedium"
+		android:layout_below="@+id/date"
+		android:layout_alignParentRight="true"
+		android:layout_alignParentEnd="true"
+		android:textSize="14dp"/>
 
 	<TextView
 		android:id="@+id/date"
