--- a/Mpp_Project/res/layout/fragment_section_loans.xml
+++ b/Mpp_Project/res/layout/fragment_section_loans.xml
@@ -9,10 +9,11 @@
         android:id="@+id/mainLayout">
 
     <Button
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text="Refresh"
-            android:id="@+id/refreshButton"/>
+        android:id="@+id/refreshButton"
+        style="@color/blue"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Refresh" />
 
     <it.gmariotti.cardslib.library.view.CardListView
             xmlns:card="http://schemas.android.com/apk/res-auto"
