--- a/Mpp_Project/res/layout/layout_loan_item.xml
+++ b/Mpp_Project/res/layout/layout_loan_item.xml
@@ -5,7 +5,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
                   android:id="@+id/loan_main_info"
                   android:layout_width="fill_parent"
                   android:layout_height="wrap_content"
@@ -66,7 +66,7 @@
                 android:layout_column="4"/>
 
         </LinearLayout>
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <LinearLayout
                       android:id="@+id/loan_comments"
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
