--- a/Mpp_Project/res/layout/spinner_rows.xml
+++ b/Mpp_Project/res/layout/spinner_rows.xml
@@ -22,7 +22,7 @@
         android:textColor="@drawable/red"
         android:textStyle="bold" />
 
-     <CheckedTextView
+     <TextView
          android:layout_toRightOf="@+id/image"
          android:padding="2dip"
          android:textColor="@drawable/darkgrey"
