--- a/Mpp_Project/res/layout/user_photo.xml
+++ b/Mpp_Project/res/layout/user_photo.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RegularLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res/dk.aau.mpp_project"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -18,4 +18,4 @@
 		app:border_width="4dp"
 		app:shadow="true" />
 
-</LinearLayout>
+</RegularLayout>
