--- a/Mpp_Project/res/layout/spinner_rows.xml
+++ b/Mpp_Project/res/layout/spinner_rows.xml
@@ -1,35 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent"
+	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:orientation="vertical"
-	android:padding="3dip" >
+	android:orientation="horizontal"
+	android:padding="5dip" >
 
 	<ImageView
 		android:id="@+id/image"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content" />
+		android:layout_width="50dp"
+		android:layout_height="50dp"
+		android:layout_alignParentLeft="true"
+		android:src="@drawable/av1" />
 
 	<TextView
 		android:id="@+id/spinnerUser"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginLeft="5dip"
-		android:layout_marginTop="2dip"
+		android:layout_centerVertical="true"
+		android:layout_marginLeft="20dp"
 		android:layout_toRightOf="@+id/image"
-		android:padding="3dip"
-		android:textColor="@drawable/red"
+		android:padding="3dp"
 		android:textStyle="bold" />
-
-	<TextView
-		android:id="@+id/sub"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_below="@+id/spinnerUser"
-		android:layout_marginLeft="5dip"
-		android:layout_toRightOf="@+id/image"
-		android:checkMark="?android:attr/listChoiceIndicatorMultiple"
-		android:padding="2dip"
-		android:textColor="@drawable/darkgrey" />
 
 </RelativeLayout>
