--- a/Mpp_Project/res/layout/fragment_expenses.xml
+++ b/Mpp_Project/res/layout/fragment_expenses.xml
@@ -51,7 +51,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="14dp"
-		android:text="Last expenses:"
+		android:layout_marginLeft="10dp"
+		android:text="Last expenses :"
 		android:textAppearance="?android:attr/textAppearanceLarge" />
 
 	<ListView
