--- a/Mpp_Project/res/layout/layout_expensesitem.xml
+++ b/Mpp_Project/res/layout/layout_expensesitem.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal" >
-    
-    <TextView
-        android:id="@+id/datetext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="date"
-        android:layout_marginTop="14dp" />
+	android:layout_width="match_parent"
+	android:layout_height="wrap_content"
+	android:orientation="horizontal"
+	android:padding="10dp" >
 
-    <TextView
-        android:id="@+id/commenttext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="comment"
-        android:layout_marginTop="14dp" />
+	<TextView
+		android:id="@+id/datetext"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="5dp"
+		android:layout_marginTop="14dp"
+		android:text="date" />
 
-    <TextView
-        android:id="@+id/pricetext"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:text="price"
-        android:layout_marginTop="14dp" />
+	<TextView
+		android:id="@+id/commenttext"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="10dp"
+		android:layout_marginTop="14dp"
+		android:text="comment" />
+
+	<TextView
+		android:id="@+id/pricetext"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginLeft="10dp"
+		android:layout_marginTop="14dp"
+		android:text="price" />
 
 </LinearLayout>
