--- a/Mpp_Project/res/layout/activity_login.xml
+++ b/Mpp_Project/res/layout/activity_login.xml
@@ -20,11 +20,12 @@
 	    android:id="@+id/logo"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_above="@+id/loginButton"
-	    android:layout_alignLeft="@+id/loginButton"
+	    android:layout_alignBottom="@+id/loginButton"
+	    android:layout_alignParentTop="true"
+	    android:layout_alignRight="@+id/loginButton"
 	    android:layout_alignStart="@+id/loginButton"
-	    android:layout_marginBottom="92dp"
+	    android:layout_marginBottom="40dp"
 	    android:contentDescription="@null"
-	    android:src="@color/grey_light" />
+	    android:src="@drawable/icon_big" />
 
 </RelativeLayout>
